# discord-message-parser

./: .gitignore  Cargo.toml  README.md
assets/graphql/: github-schema.graphql  github-twemoji-head.graphql  github-twemoji-list.graphql
crate/discord-message-parser/: Cargo.toml  build.rs
crate/discord-message-parser-derive/: Cargo.toml
crate/discord-message-parser-derive/src/: lib.rs
crate/discord-message-parser-test-bot/: Cargo.toml
crate/discord-message-parser-test-bot/src/: main.rs
crate/discord-message-parser/src/: lib.rs  serenity.rs
