[package]
name = "discord-message-parser-derive"
version = "0.2.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
graphql_client = "0.10"
itertools = "0.10"
once_cell = "1"
quote = "1"
regex = "1"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["blocking", "rustls-tls", "trust-dns"]

[dependencies.serde] # used by graphql_client
version = "1"
features = ["derive"]
