[package]
name = "discord-message-parser"
version = "0.2.0"
edition = "2018"

[features]
default = ["twemoji"]
twemoji = ["discord-message-parser-derive"]

[dependencies]
chrono = "0.4"
derivative = "2"
once_cell = "1"
regex = "1"

[dependencies.discord-message-parser-derive]
version = "=0.2.0"
path = "../discord-message-parser-derive"
optional = true

[dependencies.serenity]
version = "0.10"
default-features = false
features = ["model", "rustls_backend"]
