[package]
name = "discord-message-parser"
version = "0.2.0"
edition = "2018"

[build-dependencies]
graphql_client = "0.10"
itertools = "0.10"
lazy-regex = "2"
quote = "1"

[build-dependencies.reqwest]
version = "0.11"
default-features = false
features = ["blocking", "rustls-tls", "trust-dns"]

[build-dependencies.serde] # used by graphql_client
version = "1"
features = ["derive"]

[dependencies]
chrono = "0.4"
derivative = "2"
once_cell = "1"
regex = "1"

[dependencies.serenity]
version = "0.10"
default-features = false
features = ["model", "rustls_backend"]
