[package]
name = "discord-message-parser"
version = "0.2.0"
edition = "2021"

[build-dependencies]
graphql_client = "0.13"
itertools = "0.12"
lazy-regex = "3"
quote = "1"

[build-dependencies.reqwest]
version = "0.11"
default-features = false
features = ["blocking", "json", "rustls-tls"]

[build-dependencies.serde] # used by graphql_client
version = "1"
features = ["derive"]

[dependencies]
derivative = "2"
once_cell = "1"
regex = "1"

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["clock", "std"]

[dependencies.serenity]
version = "0.12"
default-features = false
features = ["model", "rustls_backend"]
